data/derived/comb/progs/unify/prog3613.ml.out
Characters 462-500:
  if (eval(da1, x, y)) < (eval(da2, x, y)) then ((eval(da3,x,y)) /. (eval(da4, x, y)))
                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         unit
